--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -70,7 +70,7 @@
             android:layout_height="45dp"
             android:hint="Current PIN"
             android:inputType="numberPassword"
-            android:textColor="@color/textColorSecondary"
+            android:textColor="@color/textColorPrimaryLight"
             android:textColorHint="@color/textColorPrimaryDark"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="15dp"
@@ -80,7 +80,7 @@
             android:textAlignment="viewStart"
             android:gravity="start|center_vertical"
             android:layout_marginTop="@dimen/input_field_margin"
-            android:background="@drawable/edittext_corner"
+            android:background="@drawable/outline_primary"
             android:drawableLeft="@drawable/ic_lock" />
         <EditText
             android:id="@+id/new_pin"
@@ -88,7 +88,7 @@
             android:layout_height="45dp"
             android:hint="New PIN"
             android:inputType="numberPassword"
-            android:textColor="@color/textColorSecondary"
+            android:textColor="@color/textColorPrimaryLight"
             android:textColorHint="@color/textColorPrimaryDark"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="15dp"
@@ -98,7 +98,7 @@
             android:textAlignment="viewStart"
             android:gravity="start|center_vertical"
             android:layout_marginTop="@dimen/input_field_margin"
-            android:background="@drawable/edittext_corner"
+            android:background="@drawable/outline_primary"
             android:drawableLeft="@drawable/ic_lock" />
         <EditText
             android:id="@+id/confirm_new_pin"
@@ -106,7 +106,7 @@
             android:layout_height="45dp"
             android:hint="Confirm New PIN"
             android:inputType="numberPassword"
-            android:textColor="@color/textColorSecondary"
+            android:textColor="@color/textColorPrimaryLight"
             android:textColorHint="@color/textColorPrimaryDark"
             android:drawableStart="@drawable/ic_lock"
             android:drawablePadding="15dp"
@@ -116,7 +116,7 @@
             android:textAlignment="viewStart"
             android:gravity="start|center_vertical"
             android:layout_marginTop="@dimen/input_field_margin"
-            android:background="@drawable/edittext_corner"
+            android:background="@drawable/outline_primary"
             android:drawableLeft="@drawable/ic_lock" />
 
     </LinearLayout>
@@ -157,11 +157,10 @@
                 android:layout_marginBottom="15dp"
                 android:layout_weight="1"
                 android:paddingEnd="10dp"
-                android:background="@drawable/round_button_red"
+                android:background="@drawable/rectangular_blue_solid"
                 android:text="@string/cancel"
                 android:textStyle="bold"
-                android:textColor="@color/white"
-                android:drawableEnd="@drawable/ic_right_chevron" />
+                android:textColor="@color/white" />
 
 
             <Button
@@ -173,11 +172,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="15dp"
                 android:paddingEnd="10dp"
-                android:background="@drawable/round_button_dark_green"
+                android:background="@drawable/rectangular_blue_solid"
                 android:text="UPDATE"
                 android:textStyle="bold"
-                android:textColor="@color/white"
-                android:drawableEnd="@drawable/ic_right_chevron"/>
+                android:textColor="@color/white"/>
 
         </LinearLayout>
     </LinearLayout>
