--- a/app/src/main/res/layout/fragment_business_account.xml
+++ b/app/src/main/res/layout/fragment_business_account.xml
@@ -8,34 +8,28 @@
         android:layout_height="match_parent"
         tools:context=".fragments.wallet_fragments.BusinessAccountFragment">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        </com.google.android.material.appbar.AppBarLayout>
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            app:titleTextColor="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:navigationIcon="@drawable/ic_chevron_left_blue"/>
 
 
-            <ScrollView
+
+        <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/windowBackground"
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+                android:background="#fff"
+                android:layout_marginTop="?actionBarSize">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="?actionBarSize"
                     android:orientation="vertical"
                     android:padding="@dimen/margin_15">
@@ -46,7 +40,9 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="start"
                         android:text="Business Name"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/textColor"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -55,7 +51,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:background="@drawable/outline_primary">
 
                         <EditText
                             android:id="@+id/business_name"
@@ -64,8 +60,8 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
+                            android:textColor="@color/textColorPrimaryLight"
+                            android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -80,13 +76,15 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="center_vertical"
                         android:text="Registration No."
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColor"
+                        android:textStyle="bold"
+                        android:textSize="16sp" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:background="@drawable/outline_primary">
 
                         <EditText
                             android:id="@+id/registration_number"
@@ -95,8 +93,8 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
+                            android:textColor="@color/textColorPrimaryLight"
+                            android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -111,7 +109,9 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
                         android:text="Upload Documents"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/textColor"
+                        android:textStyle="bold"
+                        android:textSize="16sp" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -126,6 +126,7 @@
                             android:layout_marginEnd="@dimen/dimen_20dp"
                             android:gravity="center"
                             android:text="Registration Cert."
+                            android:textColor="@color/textColor"
                             app:layout_constraintEnd_toStartOf="@+id/guideline9"
                             app:layout_constraintHorizontal_bias="0.53"
                             app:layout_constraintStart_toStartOf="parent"
@@ -151,6 +152,7 @@
                             android:layout_marginEnd="@dimen/dimen_20dp"
                             android:gravity="center"
                             android:text="Trade License"
+                            android:textColor="@color/textColor"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.504"
                             app:layout_constraintStart_toStartOf="@+id/guideline9"
@@ -194,7 +196,7 @@
                         android:layout_marginTop="20dp"
                         android:gravity="center"
                         android:text="Proprietor Details"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/textColor"
                         android:textStyle="bold"
                         android:textSize="17sp"/>
                     <TextView
@@ -203,7 +205,9 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="start"
                         android:text="Proprietor Name"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/textColor"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -212,7 +216,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:background="@drawable/outline_primary">
 
                         <EditText
                             android:id="@+id/proprietor_name"
@@ -221,8 +225,8 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
+                            android:textColor="@color/textColorPrimaryLight"
+                            android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -237,13 +241,15 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="center_vertical"
                         android:text="Proprietor NIN"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColor"
+                        android:textStyle="bold"
+                        android:textSize="16sp" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:background="@drawable/outline_primary">
 
                         <EditText
                             android:id="@+id/proprietor_nin"
@@ -252,8 +258,8 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
+                            android:textColor="@color/textColorPrimaryLight"
+                            android:textSize="14sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -268,7 +274,9 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
                         android:text="Upload National ID"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/textColor"
+                        android:textStyle="bold"
+                        android:textSize="16sp" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -283,6 +291,7 @@
                             android:layout_marginEnd="@dimen/dimen_20dp"
                             android:gravity="center"
                             android:text="Front"
+                            android:textColor="@color/textColor"
                             app:layout_constraintEnd_toStartOf="@+id/guideline"
                             app:layout_constraintHorizontal_bias="0.53"
                             app:layout_constraintStart_toStartOf="parent"
@@ -308,6 +317,7 @@
                             android:layout_marginEnd="@dimen/dimen_20dp"
                             android:gravity="center"
                             android:text="Back"
+                            android:textColor="@color/textColor"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.504"
                             app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -344,13 +354,15 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="center_vertical"
                         android:text="Shop Location"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColor"
+                        android:textStyle="bold"
+                        android:textSize="16sp" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:background="@drawable/outline_primary">
 
                         <EditText
                             android:id="@+id/shop_location"
@@ -359,8 +371,8 @@
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
                             android:padding="12dp"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
+                            android:textColor="@color/textColorPrimaryLight"
+                            android:textSize="14sp"
                             android:focusableInTouchMode="false"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -420,15 +432,18 @@
 
 
                     <FrameLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginBottom="10dp"
-                        android:background="@drawable/rounded_corners_button">
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/rectangular_blue_solid">
 
                         <Button
                             android:id="@+id/btn_submit"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:background="@color/transparent"
@@ -437,14 +452,7 @@
                             android:textSize="@dimen/button_text_size"
                             android:textStyle="bold"/>
 
-                        <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_gravity="end|center_vertical"
-                            android:layout_margin="10dp"
-                            android:src="@drawable/ic_right_chevron">
 
-                        </ImageView>
                     </FrameLayout>
 
                 </LinearLayout>
