--- a/app/src/main/res/layout/fragment_personal_information.xml
+++ b/app/src/main/res/layout/fragment_personal_information.xml
@@ -8,33 +8,31 @@
         android:layout_height="match_parent"
         tools:context=".fragments.wallet_fragments.AccountPersonalInformationFragment">
 
-        <com.google.android.material.appbar.AppBarLayout
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary" />
-
-        </com.google.android.material.appbar.AppBarLayout>
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            app:titleTextColor="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:navigationIcon="@drawable/ic_chevron_left_blue"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@color/windowBackground"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:background="#fff"
+            android:layout_marginTop="?actionBarSize">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="Enter personal information and earn 2 credit score points"
-                android:textColor="@android:color/black"
+                android:textColor="@color/textColor"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -56,7 +54,9 @@
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:text="Date of Birth"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -65,16 +65,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:background="@drawable/outline_primary">
 
                         <TextView
                             android:id="@+id/dob"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/textColorPrimaryLight"
                             android:background="@android:color/transparent"
-                            android:textSize="18sp"
+                            android:textSize="14sp"
                             android:padding="12dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,8 @@
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="15dp"
-                            android:src="@drawable/ic_calendar" />
+                            android:src="@drawable/ic_calendar"
+                            app:tint="@color/textColor" />
 
                     </RelativeLayout>
 
@@ -97,39 +98,50 @@
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="start"
                         android:text="Gender"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
-                        android:background="@drawable/edittext_corner">
+                        android:background="@drawable/rectangular_blue_solid">
 
                         <Spinner
                             android:id="@+id/gender"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_margin="6dp"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:gravity="center"
+                            android:spinnerMode="dropdown"
+                            android:padding="5dp"
                             android:entries="@array/spinner_gender"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            />
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginBottom="10dp"
+                            android:src="@drawable/ic_right_chevron_arrow_white"
+                            android:rotation="90"/>
 
                     </RelativeLayout>
-
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="center_vertical"
                         android:text="Next of Kin"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -152,11 +164,12 @@
                                 android:id="@+id/next_of_kin_first"
                                 android:layout_width="match_parent"
                                 android:layout_height="45dp"
-                                android:background="@drawable/edittext_corner"
+                                android:background="@drawable/outline_primary"
                                 android:hint="First Name"
                                 android:inputType="text"
-                                android:padding="12dp"
-                                android:textSize="18sp" />
+                                android:padding="10dp"
+                                android:textSize="14sp"
+                                android:textColor="@color/textColorPrimaryLight"/>
 
                         </LinearLayout>
 
@@ -176,11 +189,12 @@
                                 android:id="@+id/next_of_kin_last"
                                 android:layout_width="match_parent"
                                 android:layout_height="45dp"
-                                android:background="@drawable/edittext_corner"
+                                android:background="@drawable/outline_primary"
                                 android:hint="Last Name"
                                 android:inputType="text"
-                                android:padding="4dp"
-                                android:textSize="18sp" />
+                                android:padding="10dp"
+                                android:textSize="14sp"
+                                android:textColor="@color/textColorPrimaryLight"/>
 
                         </LinearLayout>
 
@@ -192,13 +206,15 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
                         android:text="Next of Kin Contact"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/edittext_corner"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/outline_primary"
                         android:orientation="horizontal">
 
                         <TextView
@@ -222,7 +238,8 @@
                             android:inputType="phone"
                             android:maxLength="9"
                             android:padding="12dp"
-                            android:textSize="18sp" />
+                            android:textSize="14sp"
+                            android:textColor="@color/textColorPrimaryLight"/>
 
                     </LinearLayout>
 
@@ -232,7 +249,9 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
                         android:text="Upload Profile Photo"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
 
                     <com.cabral.emaishapay.customs.CircularImageView
                         android:id="@+id/user_pic"
@@ -249,17 +268,6 @@
                         android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
 
-                        <Button
-                            android:id="@+id/submit_button"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="5dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/rectangular_blue_solid"
-                            android:text="@string/submit"
-                            android:textColor="@color/white"
-                            android:textStyle="bold" />
 
                         <Button
                             android:id="@+id/cancel_button"
@@ -270,6 +278,18 @@
                             android:layout_weight="1"
                             android:background="@drawable/rectangular_red_solid"
                             android:text="@string/cancel"
+                            android:textColor="@color/white"
+                            android:textStyle="bold" />
+
+                        <Button
+                            android:id="@+id/submit_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rectangular_blue_solid"
+                            android:text="@string/submit"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
 
